--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio website complete</title>
+        <title>Portfolio</title>
     </head>
     <body>
 
@@ -18,7 +18,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">GULSHAN TOMAR</a>
+                    <a href="#" class="nav__logo">GULSHAN</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -41,7 +41,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gulshan</span><br> Web Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gulshan Tomar</span><br>B.Tech First Year Student</h1>
 
                     <a href="https://t.me/imGtomar" class="button">Contact</a>
                 </div>
