--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                         Currently pursuring B.Tech in Computer Science and Engneering from KIET Group of Institutions.
                         
                         -->
-                        <p class="about__text"> I choose to study Computer Engerneering because of my interest in computer system in early age.Using logic to fulfil different requirement is a challenge, Which i always liked. I have been looking for career opportuinity where i can use my skills to contribute to real time projects and gain professional experience as a software engineer</p>           
+                        <p class="about__text"> I choose to study Computer Engneering because of my interest in computer system in early age.Using logic to fulfil different requirement is a challenge, Which i always liked. I have been looking for career opportuinity where i can use my skills to contribute to real time projects and gain professional experience as a software engineer</p>           
                     </div>                                   
                 </div>
             </section>
